src/app/pages/home1/home1.component.css
.container {
  max-width: 800px;
  margin: 0 auto;
  padding: 20px;
}

h1 {
  font-size: 24px;
  margin-bottom: 10px;
}

p {
  font-size: 18px;
  line-height: 1.5;
}



.game-container {
  position: relative;
  width: 600px;
  height: 200px;
  background-color: #f7f7f7;
  border: 1px solid #ddd;
  margin: 20px auto;
  overflow: hidden;
  cursor: pointer;
}

.dinosaur {
  position: absolute;
  bottom: 0;
  left: 50px;
  width: 50px;
  height: 50px;
  background-color: #f7f7f7;
  transition: transform 0.2s;
}

.jumping {
  transform: translateY(-100%);
}

.cactus {
  position: absolute;
  bottom: 0;
  width: 20px;
  height: 25px;
  background-color: #999;
}

